main/style.css
/* ... */
.item-expanded {
    display: none;
    /* Ensures expanded content is hidden by default */
    margin-top: 20px;

}

.close-button {
    display: none;
    position: absolute;
    top: 10px;
    right: 30px;
    padding: 5px 10px;
    font-size: 40px;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    text-align: center;
}

.close-about {
    position: absolute;
    top: 165px;
    right: 30px;
    padding: 5px 10px;
    font-size: 40px;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    text-align: center;
}

/* .close-about {
    position: relative;
    bottom: 0;
    padding: 5px 15px;
    font-size: 40px;
    border: none;
    border-radius: 30px;
    background-color: #ebebeb;
    cursor: pointer;
    text-align: center;

} */

.item-collapsed {
    padding: none;
    margin: none;
    margin-bottom: -50px;
    background-color: white;
    /* height: 60vh; */
}

.item-collapsed img {
    @media only screen and (max-width: 1150px) {
        height: auto;
        width: 25%;
    }
}

.item-title {
    /* position: absolute;
    bottom: 8px;
    left: 16px; */
    font-size: 1.5em;
    /* bottom: 8px; */
    transform: translate(0%, -200%);

    /* z-index: 1000; */
}

.item-title1,
.item-title4 {
    @media only screen and (max-width: 1150px) {

        background-color: rgb(233, 233, 233);
        display: flex;
    }
}

.item-title2,
.item-title5 {
    @media only screen and (max-width: 1150px) {

        background-color: rgb(161, 161, 161);
        display: flex;
    }
}


#role-title {
    font-family: "Poppins", sans-serif;
    font-weight: 700;
    /* font-style: normal; */
    text-transform: uppercase;
    text-align: center;
    margin: 0;
    color: white;
    transform: translate(0%, -200%);

    @media only screen and (max-width: 1150px) {
        text-align: left;
        padding-left: 7em;
        font-size: 2.8em;
        transform: translate(0%, -250%);
        color: rgb(0, 0, 0);
    }

    @media only screen and (max-width: 850px) {
        text-align: left;
        padding-left: 7em;
        font-size: 2.5em;
        transform: translate(0%, -250%);
        color: rgb(0, 0, 0);
    }

    @media only screen and (max-width: 600px) {
        text-align: left;
        padding-left: 7em;
        font-size: 1.5em;
        transform: translate(0%, -300%);
        color: rgb(0, 0, 0);
    }

    @media only screen and (max-width: 500px) {
        text-align: left;
        padding-left: 7em;
        font-size: 1.2em;
        transform: translate(0%, -300%);
        color: rgb(0, 0, 0);
    }

    @media only screen and (max-width: 400px) {
        text-align: left;
        padding-left: 7em;
        font-size: 1em;
        transform: translate(0%, -300%);
        color: rgb(0, 0, 0);
    }

}

.expanded .item-expanded {
    display: contents;
    /* Show expanded content when parent has .expanded */

}

.expanded .item-collapsed {
    display: none;
    /* Hide collapsed content when expanded */
}

.dropdown-content {
    display: none;
    /* Keep dropdown hidden by default */
}

.show {
    display: block !important;
    /* Class to show dropdown when active */
}


.container-roles {
    margin: 10px 40px;
    display: grid;
    gap: 10px;

    /* grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); */
}

.item-role {
    /* background-color: #ffffff; */
    text-align: center;
    /* height: 60vh; */
    transition: all 0.3s ease-out;
    overflow: hidden;
    cursor: pointer;
    position: relative;
}

.item-role.expanded {
    background-color: #eeeeee;
    padding: 20px;
    display: block;

    /* Ensures content stays within the container */
    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
    overflow: hidden;
    /* Prevents unintended scrolling */
    grid-template-columns: 1fr;

    /* Keeps the layout intact */
    @media only screen and (max-width: 1150px) {
        display: block;
    }
}

.item-role.dimmed {
    opacity: 1;
    /* Reduces brightness */
    filter: brightness(80%);
    /* Optional: Reduces contrast */
    transition: opacity 0.3s ease-in-out;
}


.item-role.inside1 img {
    max-width: 50%;
    /* Makes sure the image never exceeds its container */
    height: auto;
    /* Maintains the aspect ratio */
    display: block;
    /* Removes extra space under the image */
    object-fit: cover;
    /* Adjusts the image to fit within constraints */
}


.item-role .inside1,
.item-role .inside2 {
    display: none;
    /* Hide content by default */
    cursor: default !important;
}

.item-role.expanded .inside1,
.item-role.expanded .inside2 {
    display: block;
    /* Show content when expanded */
    /* padding: 0 !important; */
    font-size: 14px;
}

.item-role .inside-header {
    /* padding-top: 50px; */

    @media only screen and (max-width: 1150px) {
        padding-top: 40px;
    }

    @media only screen and (max-width: 1100px) {
        padding-top: 20px;
    }
}

.item-role.expanded .inside2 {

    @media only screen and (max-width: 1150px) {
        padding-top: 40px;

    }
}

/* had to make more spacing on the right so that its more aligned to the nav  */
.inside2 {
    /* margin-right: 30px; */

    @media only screen and (max-width: 1150px) {

        padding-top: 20px;
    }
}

.item1 {
    grid-column-start: 1;
    grid-row-start: 1;

    @media only screen and (max-width: 1150px) {
        grid-column-start: 1;
        grid-row-start: 1;
    }
}

.item2 {
    grid-column-start: 2;
    grid-row-start: 1;

    @media only screen and (max-width: 1150px) {
        grid-column-start: 1;
        grid-row-start: 2;
    }
}

/* .item3 {
    grid-column-start: 3;
    grid-row-start: 1;
} */

.item4 {
    grid-column-start: 3;
    grid-row-start: 1;

    @media only screen and (max-width: 1150px) {
        grid-column-start: 1;
        grid-row-start: 3;
    }
}
/* ... */

